fixup! :lipstick: Stop layout shift when popup opened

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -125,7 +125,6 @@ button.red:hover {
 }
 
 .noscroll {
-	position: fixed;
-	width: 100%;
-	overflow-y: scroll;
+	overflow: hidden;
+	scrollbar-gutter: stable;
 }
